--- a/app/src/main/res/layout/activity_panorama_album.xml
+++ b/app/src/main/res/layout/activity_panorama_album.xml
@@ -67,13 +67,13 @@
                     android:textSize="@dimen/sp18" />
             </RelativeLayout>
         </RelativeLayout>
-
+        <!--android:visibility="@{connected?View.GONE:View.VISIBLE}"-->
         <RelativeLayout
             android:id="@+id/act_panorama_camera_banner_bad_net_work"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y42"
             android:background="#FFFFFCE1"
-            android:visibility="@{connected?View.GONE:View.VISIBLE}"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/act_panorama_album_toolbar_container">
 
             <ImageView
