暂无历史录像提示

--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -62,15 +62,15 @@
                 hunt:sv_title="@string/SETTING_TIMEZONE"
                 hunt:sv_v_divider="false" />
 
-            <TextView
-                android:id="@+id/tv_storage"
-                style="@style/information_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/y15"
-                android:text="@string/VALID_STORAGE"
-                android:textColor="#4B9FD5"
-                android:textSize="@dimen/sp14" />
+            <!--<TextView-->
+                <!--android:id="@+id/tv_storage"-->
+                <!--style="@style/information_item"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginTop="@dimen/y15"-->
+                <!--android:text="@string/VALID_STORAGE"-->
+                <!--android:textColor="#4B9FD5"-->
+                <!--android:textSize="@dimen/sp14" />-->
 
             <!-- “储存”相关模块 -->
             <com.cylan.jiafeigou.widget.SettingItemView0
