--- a/app/src/_doby/res/layout/activity_welcome_page.xml
+++ b/app/src/_doby/res/layout/activity_welcome_page.xml
@@ -12,7 +12,7 @@
             android:id="@+id/fLayout_splash"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/doby_welcome"
+            android:background="@drawable/splash_screen"
         >
 
             <ImageView
