更改邮箱文案.首页遮罩+.我的页面获取验证码,校验手机号

--- a/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
+++ b/app/src/main/res/layout/fragment_mine_info_bind_phone.xml
@@ -94,7 +94,7 @@
                     android:textSize="@dimen/sp16" />
 
                 <TextView
-                    android:id="@+id/tv_meter_get_code"
+                    android:id="@+id/Tap0_BindEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="end"
