--- a/app/src/main/res/layout/fragment_home_page_cover.xml
+++ b/app/src/main/res/layout/fragment_home_page_cover.xml
@@ -17,7 +17,7 @@
         android:layout_marginLeft="@dimen/x5"
         android:layout_marginRight="@dimen/x5"
         android:padding="@dimen/x10"
-        android:src="@drawable/btn_common_add" />
+        android:src="@drawable/icon_add_to" />
 
     <TextView
         android:id="@+id/tv_pop_content"
