--- a/app/src/main/res/layout/fragment_mine_info_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_info_mailbox.xml
@@ -18,7 +18,7 @@
         hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_white"
         hunt:ct_icon_right="@drawable/me_icon_finish_normal"
-        hunt:ct_left_title="@string/Tap0_BindEmail"
+        hunt:ct_left_title="@string/CHANGE_EMAIL"
         hunt:ct_left_title_color="@color/color_white" />
 
     <FrameLayout
