--- a/app/src/main/res/layout/fragment_forget_pwd_get_code.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_get_code.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_get_code"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,29 +23,29 @@
                 android:layout_marginTop="@dimen/y30">
 
                 <LinearLayout
-                    android:layout_centerVertical="true"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/et_forget_username"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_marginBottom="@dimen/y5"
                         android:layout_marginTop="@dimen/y5"
+                        android:layout_weight="1"
                         android:background="@null"
                         android:focusable="true"
                         android:focusableInTouchMode="true"
                         android:gravity="center"
                         android:hint="@string/PHONE_EMAIL"
+                        android:inputType="textVisiblePassword"
                         android:maxLength="65"
-                        android:singleLine="true"
                         android:paddingLeft="2dp"
                         android:paddingRight="2dp"
-                        android:inputType="textVisiblePassword"
+                        android:singleLine="true"
                         android:textColor="@color/color_666666"
                         android:textColorHint="@color/color_cecece"
                         android:textCursorDrawable="@drawable/bg_common_cursor"
