使用新包名

--- a/app/src/_cell_c/res/values/oem_.xml
+++ b/app/src/_cell_c/res/values/oem_.xml
@@ -15,4 +15,5 @@
     <bool name="show_wechat_entrance">false</bool>
     <string name="qrcode_prefix">%1$s&amp;id=%2$s</string>
     <string name="share_to_friends_link">https://play.google.com/store/apps/details?id=%s</string>
+    <string name="agreementSuffix">"cell_c"</string>
 </resources>
