--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -18,4 +18,5 @@
     <string name="share_default_title">@string/Tap1_Shared_Title_zhognxing</string>
     <string name="share_to_friends_link">http://a.app.qq.com/o/simple.jsp?pkgname=%s&amp;g_f=991653</string>
     <string name="facebook_app_id">fb1770285686596084</string>
+    <string name="agreementSuffix">"_zhongxing"</string>
 </resources>
